--- a/firebase/style.css
+++ b/firebase/style.css
@@ -1,3 +1,7 @@
+:root { /* variables here */
+    --main-color:#036C5F;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +13,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #9633FF;
+    background-image: url(wallpaper.png);
+    background-color: var(--main-color);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -36,7 +41,7 @@ input {
 
 #submit-btn {
     border: none;
-    background-color: blueviolet;
+    background-color: var(--main-color);
     width: 100%;
     padding: 10px 8px;
     color: white;
@@ -44,6 +49,7 @@ input {
     text-transform: uppercase;
     cursor: pointer;
     margin: 9px 0px;
+    border-radius: 5px
 }
 
 p {
@@ -56,4 +62,5 @@ p {
 a {
     text-decoration: none;
     font-weight: bolder;
+    color: var(--main-color);
 }
