--- a/firebase/style.css
+++ b/firebase/style.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(wallpaper.png);
+    background-image: url(../assets/images/wallpaper.png);
     background-color: var(--main-color);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
