--- a/vite-project/src/css/style.css
+++ b/vite-project/src/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 
 :root {
     background-color: rgb(29,29,26)
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 0;
     font-size: 62.5%;
-    font-family: 'Source Code Pro';
+    font-family: 'Nova Square', cursive;
 }
 
 h1 {
@@ -111,6 +111,11 @@ input::placeholder {
     color: #aaa;
 }
 
+#topic {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: none;
+}
 #username {
     margin-bottom: 3rem;
     width: 100%;
