number of questions to game.js

--- a/vite-project/src/css/style.css
+++ b/vite-project/src/css/style.css
@@ -110,7 +110,11 @@ input {
 input::placeholder {
     color: #aaa;
 }
-
+#qnum {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: none;
+}
 #topic {
     margin-bottom: 3rem;
     width: 100%;
