--- a/vite-project/src/css/style.css
+++ b/vite-project/src/css/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
 :root {
-    background-color: rgb(29,29,26)
+    background-color: rgb(29,29,26);
+    background-image: url('../../public/wallpaper.png');
 }
 
 * {
@@ -9,7 +11,8 @@
     margin: 0;
     padding: 0;
     font-size: 62.5%;
-    font-family: 'Nova Square', cursive;
+    font-family: 'Quicksand', cursive;
+    
 }
 
 h1 {
