--- a/vite-project/src/css/style.css
+++ b/vite-project/src/css/style.css
@@ -68,13 +68,13 @@ h2 {
     margin-bottom: 1rem;
     text-decoration: none;
     color: rgb(28, 26, 26);
-    background: linear-gradient(90deg, rgb(18,93,255) 0%, rgb(0, 102, 255) 100%);
+    background: rgb(69,129,142);
     border-radius: 4px;
 }
 
 .btn:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(8,114, 244, 0.6);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(12,52,61, 0.6);
     transition: transform 150ms;
     transform: scale(1.03);
 }
@@ -107,7 +107,7 @@ input {
     padding: 1.5rem;
     font-size: 1.8rem;
     border: none;
-    box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+    /*box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);*/
 }
 
 input::placeholder {
