--- a/vite-project/src/css/game.css
+++ b/vite-project/src/css/game.css
@@ -6,15 +6,15 @@ body {
     display: flex;
     margin-bottom: 0.8rem;
     width: 100%;
-    border-radius: 4px;
-    background: rgb(69,129,142);
+    border-radius: 15px;
+    background: rgb(28, 26, 26);
     font-size: 3rem;
     min-width: 80rem;
 }
 
 .choice-container:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(69,129,142,0.5);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(6,102,247,0.5);
     transform: scale(1.02);
     transform: transform 100ms;
 }
