--- a/vite-project/src/css/style.css
+++ b/vite-project/src/css/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
 :root {
-    --main-purple:rgb(69,129,142);
-    background-color:var(--main-purple);
+    --main-color:rgb(69,129,142);
+    background-color:var(--main-color);
     
     
 }
@@ -35,7 +35,7 @@
 .navigation .logo{
   float: left;
   font-family:"Righteous", "Quicksand";
-  color:var(--main-purple);
+  color:var(--main-color);
   font-size:40px;
   text-align:center;
   text-decoration:none;
@@ -47,7 +47,7 @@
     font-size:40px;
 }
 .navigation span.me{
-    color:var(--main-purple);
+    color:var(--main-color);
     font-size:40px;
 }
 .navigation .contabt{
@@ -66,7 +66,7 @@
   font-size: 17px;
 }
 .navigation a:hover {
-  color:var(--main-purple);
+  color:var(--main-color);
 }
 
 
@@ -122,7 +122,7 @@ h2 {
     text-align: center;
     margin-bottom: 1rem;
     text-decoration: none;
-    color: var(--main-purple);
+    color: var(--main-color);
     background: rgb(28, 26, 26);
     border-radius: 15px;
     border:none;
