--- a/vite-project/src/css/style.css
+++ b/vite-project/src/css/style.css
@@ -39,7 +39,7 @@
     background-color:var(--second-color);
     background-size:500px;
     justify-content: space-between;
-    padding: 30px;
+    padding: 30px 30px 30px 60px;
   }
 
 
@@ -51,9 +51,6 @@
   margin-right:auto;
   font-weight:bold;
 }
-.navigation:hover{
-    transform: scale(1.02);
-  }
 .navigation span.quiz{
     color:var(--third-color);
     font-size:30px;
@@ -89,6 +86,7 @@
 img {
     cursor: pointer;
 }
+
 
 .navigation .rightside {
     display: flex;
