--- a/vite-project/src/css/style.css
+++ b/vite-project/src/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap');
 
 :root .dark-theme{
     --first-color:#002a2a;
@@ -31,7 +32,6 @@
 .navigation {
     display:flex;
     align-items: center;
-    font-family:"Righteous", "Quicksand";
     overflow: hidden;
     border-radius:35px;
     transition: transform .2s;
@@ -94,6 +94,10 @@ img {
     gap: 25px;
 }
 
+.navigation .emoji {
+    font-family:"Noto Color Emoji";
+    cursor:pointer;
+}
 
 h1 {
     font-size: 5.4rem;
