--- a/vite-project/src/css/style.css
+++ b/vite-project/src/css/style.css
@@ -40,6 +40,7 @@
     background-size:500px;
     justify-content: space-between;
     padding: 30px 30px 30px 60px;
+    user-select:none;
   }
 
 
@@ -50,6 +51,10 @@
   text-decoration:none;
   margin-right:auto;
   font-weight:bold;
+  transition:transform .2s;
+}
+.navigation .logo:hover {
+    transform:scale(1.1);
 }
 .navigation span.quiz{
     color:var(--third-color);
@@ -70,17 +75,17 @@
   float:right;
   margin-top:auto;
   margin-bottom:auto;
+  transition:transform .2s;
 }
-
+.navigation .contabt:hover{
+    transform:scale(1.1);
+}
 .navigation a {
   float: right;
   color:var(--third-color);
   text-align: center;
   text-decoration: none;
   font-size: 17px;
-}
-.navigation a:hover {
-  color:var(--first-color);
 }
 
 img {
@@ -97,8 +102,14 @@ img {
 .navigation .emoji {
     font-family:"Noto Color Emoji";
     cursor:pointer;
+    transition:transform .2s;
 }
-
+.navigation .emoji:hover{
+    transform:scale(1.1);
+}
+.navigation .emoji:active{
+    transform:rotate(90deg);
+}
 h1 {
     font-size: 5.4rem;
     color: white;
