--- a/quiz_me/src/css/game.css
+++ b/quiz_me/src/css/game.css
@@ -54,7 +54,8 @@ body {
 
 #hud {
     display: flex;
-    justify-content: space-between;   
+    justify-content: space-between;
+    margin-top: 60px;
 }
 
 .hud-prefix {
