button styling, save score alert

--- a/quiz_me/src/css/game.css
+++ b/quiz_me/src/css/game.css
@@ -10,13 +10,13 @@ body {
     background: rgb(28, 26, 26);
     font-size: 3rem;
     min-width: 80rem;
+    transition:transform .2s;
 }
 
 .choice-container:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(6,102,247,0.5);
+    /* box-shadow: 0 0.4rem 1.4rem 0 rgba(6,102,247,0.5); */
     transform: scale(1.02);
-    transform: transform 100ms;
 }
 
 .choice-prefix {
