--- a/quiz_me/src/css/style.css
+++ b/quiz_me/src/css/style.css
@@ -206,10 +206,12 @@ h2 {
 
 input {
     margin-bottom: 1rem;
-    width: 20rem;
+    width: 100%;
     padding: 1.5rem;
     font-size: 1.8rem;
-    border: none;
+    outline: none;
+    border:none;
+    border-radius: 15px
 }
 
 input::placeholder {
