--- a/quiz_me/src/css/style.css
+++ b/quiz_me/src/css/style.css
@@ -115,12 +115,14 @@ img {
 }
 h1 {
     font-size: 5.4rem;
+    font-weight:normal;
     color: white;
     margin-bottom: 5rem;
 }
 
 h2 {
     font-size: 4.2rem;
+    font-weight:normal;
     margin-bottom: 4rem;
 }
 
