--- a/quiz_me/src/css/game.css
+++ b/quiz_me/src/css/game.css
@@ -1,7 +1,9 @@
 body {
     color: #fff;
 }
-
+h1 {
+    font-size:2vw;
+}
 .choice-container {
     display: flex;
     margin-bottom: 0.8rem;
@@ -55,7 +57,7 @@ body {
 #hud {
     display: flex;
     justify-content: space-between;
-    margin-top: 60px;
+    margin-top: 100px;
 }
 
 .hud-prefix {
