--- a/quiz_me/assets/css/style.css
+++ b/quiz_me/assets/css/style.css
@@ -36,6 +36,12 @@
     text-align: center;
 }
 
+
+.tagline {
+    text-align: center;
+    padding: 60px;
+}
+
 .navigation {
     display: flex;
     align-items: center;
