--- a/quiz_me/assets/css/style.css
+++ b/quiz_me/assets/css/style.css
@@ -41,10 +41,8 @@
 }
 
 .tagline {
+    margin-top: 5rem;
     text-align: center;
-    padding-top: 20px;
-    padding-left: 60px;
-    padding-right: 60px;
 }
 
 .tagline span.emphasis {
@@ -138,11 +136,14 @@
     transform: rotate(45deg);
 }
 
+.container h1 {
+    margin-bottom: 5rem;
+}
+
 h1 {
     font-size: 5.4rem;
     font-weight: normal;
     color: white;
-    margin-bottom: 5rem;
 }
 
 h2 {
@@ -153,13 +154,20 @@ h2 {
 
 .container {
     width: 100vw;
-    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
     max-width: 80rem;
     margin: 0 auto;
     padding: 2rem;
+}
+
+.game .container {
+    height: 60rem;
+}
+
+.instantiator .container {
+    height: 50rem;
 }
 
 .flex-column {
