--- a/quiz_me/assets/css/style.css
+++ b/quiz_me/assets/css/style.css
@@ -26,6 +26,12 @@
     background-color: var(--bg-color);
 }
 
+#design img {
+    position: absolute;
+    bottom:0px;
+    left:0px;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
